--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 		"@types/node": "^16.11.19",
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.11",
+		"axios": "^0.25.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.6",
@@ -25,7 +26,7 @@
 		"web-vitals": "^2.1.3"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "BROWSER=None react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
