--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.11",
 		"axios": "^0.25.0",
+		"dayjs": "^1.10.7",
+		"formik": "^2.2.9",
+		"jwt-decode": "^3.1.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.6",
@@ -23,7 +26,8 @@
 		"redux": "^4.1.2",
 		"redux-thunk": "^2.4.1",
 		"typescript": "^4.5.4",
-		"web-vitals": "^2.1.3"
+		"web-vitals": "^2.1.3",
+		"yup": "^0.32.11"
 	},
 	"scripts": {
 		"start": "BROWSER=None react-scripts start",
