added aws s3 storage, heroku postgres database, heroku deploy settings

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,8 +2,13 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
+# database data
+datadump.json
+
+
 # staticfiles
 staticfiles/
+static/
 
 # .sh files
 *.sh
